testcases/error/unassign_variable.veryl
module unassign_variable {
    var _a: logic;
}
